// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-slider re-renders on prop changes 1`] = `
<ld-slider class="ld-slider ld-slider--disabled" role="group" value="30,70" style="--v0: 30; --ld-slider-width: 500px; --min: 1; --max: 99; --fill: 
linear-gradient(
  90deg,
  red 100%,
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width))
    ),
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v1) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width))
    ),
  transparent 0
); --v1: 70;">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Von
    </label>
    <input aria-disabled="true" class="ld-slider__input" disabled="" id="v0" max="99" min="1" type="range" value="30"><output class="ld-slider__output ld-slider__output--permanent" htmlfor="v0" style="--c: var(--v0);"></output>
    <label class="sr-only" htmlfor="v1">
      Bis
    </label>
    <input aria-disabled="true" class="ld-slider__input" disabled="" id="v1" max="99" min="1" type="range" value="70"><output class="ld-slider__output ld-slider__output--permanent" htmlfor="v1" style="--c: var(--v1);"></output>
    <div class="ld-slider__indicator" style="--c: 1;"></div>
    <div class="ld-slider__indicator" style="--c: 30;"></div>
    <div class="ld-slider__indicator" style="--c: 50;"></div>
    <div class="ld-slider__indicator" style="--c: 70;"></div>
    <div class="ld-slider__indicator" style="--c: 99;"></div>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 1;">
      1
    </div>
    <div class="ld-slider__edge" style="--c: 30;">
      30
    </div>
    <div class="ld-slider__edge" style="--c: 50;">
      50
    </div>
    <div class="ld-slider__edge" style="--c: 70;">
      70
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 99;">
      99
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders 2 thumbs 1`] = `
<ld-slider class="ld-slider" role="group" value="10,50" style="--v0: 10; --v1: 50; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v1) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      From
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="10"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <label class="sr-only" htmlfor="v1">
      To
    </label>
    <input class="ld-slider__input" id="v1" max="100" min="0" type="range" value="50"><output class="ld-slider__output" htmlfor="v1" style="--c: var(--v1);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders 2 thumbs with custom thumb labels 1`] = `
<ld-slider class="ld-slider" role="group" value="10,50" style="--v0: 10; --v1: 50; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v1) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Von
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="10"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <label class="sr-only" htmlfor="v1">
      Bis
    </label>
    <input class="ld-slider__input" id="v1" max="100" min="0" type="range" value="50"><output class="ld-slider__output" htmlfor="v1" style="--c: var(--v1);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders aria-disabled 1`] = `
<ld-slider class="ld-slider ld-slider--disabled" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input aria-disabled="true" class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders custom edges 1`] = `
<ld-slider class="ld-slider" role="group" value="-50" style="--v0: -50; --ld-slider-width: 100%; --min: -50; --max: 50; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="50" min="-50" type="range" value="-50"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: -50;">
      -50
    </div>
    <div class="ld-slider__edge" style="--c: -25;">
      -25
    </div>
    <div class="ld-slider__edge" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge" style="--c: 25;">
      25
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 50;">
      50
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders default 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders disabled 1`] = `
<ld-slider class="ld-slider ld-slider--disabled" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input aria-disabled="true" class="ld-slider__input" disabled="" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders more than 2 thumbs with custom thumb labels 1`] = `
<ld-slider class="ld-slider" role="group" value="10,50,80" style="--v0: 10; --v1: 50; --v2: 80; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v1) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v2) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Thumb 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="10"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <label class="sr-only" htmlfor="v1">
      Thumb 2
    </label>
    <input class="ld-slider__input" id="v1" max="100" min="0" type="range" value="50"><output class="ld-slider__output" htmlfor="v1" style="--c: var(--v1);"></output>
    <label class="sr-only" htmlfor="v2">
      Thumb 3
    </label>
    <input class="ld-slider__input" id="v2" max="100" min="0" type="range" value="80"><output class="ld-slider__output" htmlfor="v2" style="--c: var(--v2);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders step indicators 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" step="20" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__indicator" style="--c: 0;"></div>
    <div class="ld-slider__indicator" style="--c: 20;"></div>
    <div class="ld-slider__indicator" style="--c: 40;"></div>
    <div class="ld-slider__indicator" style="--c: 60;"></div>
    <div class="ld-slider__indicator" style="--c: 80;"></div>
    <div class="ld-slider__indicator" style="--c: 100;"></div>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders stop indicators 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__indicator" style="--c: 0;"></div>
    <div class="ld-slider__indicator" style="--c: 20;"></div>
    <div class="ld-slider__indicator" style="--c: 45;"></div>
    <div class="ld-slider__indicator" style="--c: 85;"></div>
    <div class="ld-slider__indicator" style="--c: 100;"></div>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge" style="--c: 20;">
      20
    </div>
    <div class="ld-slider__edge" style="--c: 45;">
      45
    </div>
    <div class="ld-slider__edge" style="--c: 85;">
      85
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders with custom width 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 500px; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders with inverted color indicators 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red 100%,
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders with values always visible 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output ld-slider__output--permanent" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider renders without indicators, if step/stops parameter not given 1`] = `
<ld-slider class="ld-slider" role="group" value="0" style="--v0: 0; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider strict mode prevents invalid value changes without re-rendering 1`] = `
<ld-slider class="ld-slider" role="group" value="51,50" style="--v0: 0; --v1: 100; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
),
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v1) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      From
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="0"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <label class="sr-only" htmlfor="v1">
      To
    </label>
    <input class="ld-slider__input" id="v1" max="100" min="0" type="range" value="100"><output class="ld-slider__output" htmlfor="v1" style="--c: var(--v1);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;

exports[`ld-slider updates css props on value changes 1`] = `
<ld-slider class="ld-slider" role="group" value="50" style="--v0: 50; --ld-slider-width: 100%; --min: 0; --max: 100; --fill: 
linear-gradient(
  90deg,
  red
    calc(
      var(--ld-slider-radius) - var(--ld-slider-margin) +
        (var(--v0) - var(--min)) / var(--ld-slider-diff) *
        (var(--ld-slider-useful-width) + 2 * var(--ld-slider-margin))
    ),
  transparent 0
);">
  <mock:shadow-root>
    <label class="sr-only" htmlfor="v0">
      Value 1
    </label>
    <input class="ld-slider__input" id="v0" max="100" min="0" type="range" value="50"><output class="ld-slider__output" htmlfor="v0" style="--c: var(--v0);"></output>
    <div class="ld-slider__edge ld-slider__edge--first" style="--c: 0;">
      0
    </div>
    <div class="ld-slider__edge ld-slider__edge--last" style="--c: 100;">
      100
    </div>
  </mock:shadow-root>
</ld-slider>
`;
